fixed added z-index for item-toggle

--- a/app/pages/ticket-details/ticket-details.scss
+++ b/app/pages/ticket-details/ticket-details.scss
@@ -74,6 +74,7 @@ textarea{
     padding-bottom: 20px !important;
     display: inline-block;
     padding-left: 0px !important;
+    z-index:9;
 }
 
 .toggle-width{
